version/0.3/_sources/api/ansys/speos/core/kernel/face/FaceStub.rst.txt






:class:`FaceStub`
=================

.. py:class:: ansys.speos.core.kernel.face.FaceStub(channel)

   Bases: :py:obj:`ansys.speos.core.kernel.crud.CrudStub`


   
   Database interactions for face.


   :Parameters:

       **channel** : :obj:`grpc.Channel`
           Channel to use for the stub.













   .. rubric:: Examples

   The best way to get a FaceStub is to retrieve it from SpeosClient via faces() method.
   Like in the following example:

   >>> from ansys.speos.core.speos import Speos
   >>> speos = Speos(host="localhost", port=50098)
   >>> face_db = speos.client.faces()

   ..
       !! processed by numpydoc !!


.. py:currentmodule:: FaceStub

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~create`
            - Create a new entry.
          * - :py:attr:`~read`
            - Get an existing entry.
          * - :py:attr:`~update`
            - Change an existing entry.
          * - :py:attr:`~delete`
            - Remove an existing entry.
          * - :py:attr:`~list`
            - List existing entries.








Import detail
-------------

.. code-block:: python

    from ansys.speos.core.kernel.face import FaceStub



Method detail
-------------

.. py:method:: create(message)

   
   Create a new entry.


   :Parameters:

       **message** : :obj:`face.Face`
           Datamodel for the new entry.



   :Returns:

       :obj:`ansys.speos.core.kernel.face.FaceLink`
           Link object created.











   ..
       !! processed by numpydoc !!

.. py:method:: read(ref)

   
   Get an existing entry.


   :Parameters:

       **ref** : :obj:`ansys.speos.core.kernel.face.FaceLink`
           Link object to read.



   :Returns:

       :obj:`face.Face`
           Datamodel of the entry.











   ..
       !! processed by numpydoc !!

.. py:method:: update(ref, data)

   
   Change an existing entry.


   :Parameters:

       **ref** : :obj:`ansys.speos.core.kernel.face.FaceLink`
           Link object to update.

       **data** : :obj:`face.Face`
           New datamodel for the entry.














   ..
       !! processed by numpydoc !!

.. py:method:: delete(ref)

   
   Remove an existing entry.


   :Parameters:

       **ref** : :obj:`ansys.speos.core.kernel.face.FaceLink`
           Link object to delete.














   ..
       !! processed by numpydoc !!

.. py:method:: list()

   
   List existing entries.





   :Returns:

       :obj:`List`\[:obj:`ansys.speos.core.kernel.face.FaceLink`]
           Link objects.











   ..
       !! processed by numpydoc !!




